--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@
 django-allauth==0.50.0
 django-crispy-forms==1.14.0  # https://github.com/django-crispy-forms/django-crispy-forms
 crispy-bootstrap5==0.6  # https://github.com/django-crispy-forms/crispy-bootstrap5
+xhtml2pdf==0.2.7
